[package]
name = "ttg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
rsip = { git = "https://github.com/Televiska/rsip.git" }
tokio = { version = "1.35.1", features = ["full"] }
udp_polygon = "0.2.2"
uuid = { version = "1.6.1", features = ["v4"] }

